tests/errors/read_before_assignment.experr
name 'y' is not defined
